crates/diman_unit_system/tests/compile_fail/resolver_undefined_identifier.rs
#![allow(incomplete_features)]
#![feature(generic_const_exprs, adt_const_params)]

use diman_unit_system::unit_system_internal;

unit_system_internal!(
    quantity_type Quantity;
    dimension_type Dimension;
    dimension Length;
    unit kilometers = 1000.0 * meters;
);

fn main() {}
